<resources>
    <array name="tab_name">
        <item>Home</item>
        <item>Browser</item>
        <item>Search</item>
        <item>Profile</item>
    </array>


    <string name="app_name">Pilo</string>
    <string name="exit_dialog_title">Sign Out</string>
    <string name="exit_dialog_body">Are you sure you want sing out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="try_again">Try Again</string>

    <string name="server_connection_error">Please check your internet connection</string>
    <string name="server_connection_message">Please try again</string>

    <string name="welcome_page_one_title">High Fidelity Sound Quality</string>
    <string name="welcome_page_one_description">Sit back and enjoy our lossless audio \n experience. Unlimited access to ower 56 \n thousand tracks.</string>
    <string name="welcome_page_two_title">Curated Editorial</string>
    <string name="welcome_page_two_description">Tailor-made recommendations,playlists and \n articles by experienced music journalists.</string>

    <string name="bottom_navigation_home">Home</string>
    <string name="bottom_navigation_browser">Browse</string>
    <string name="bottom_navigation_search">Search</string>
    <string name="bottom_navigation_profile">Profile</string>

    <string name="results">Results</string>
    <string name="music">Music</string>
    <string name="musics">Musics</string>
    <string name="albums">Albums</string>
    <string name="playlists">Playlists</string>
    <string name="videos">Videos</string>
    <string name="artists">Artists</string>
    <string name="login">Log in</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="phone_label">Phone number</string>
    <string name="enter_phone">Enter your phone number</string>
    <string name="enter_email">Enter your email</string>
    <string name="forgot_password_btn_create">Send forgot password verify token</string>
    <string name="forgot_password_btn">Forgot Password</string>
    <string name="enter_verify_Code">Enter verify code that sent to your phone</string>
    <string name="verify_code">Verify code</string>
    <string name="resend_verify_code">Resend verify code</string>
    <string name="invalid_verify_code">Invalid verify token</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="have_account">Already a member? Sign in</string>
    <string name="or">or</string>
    <string name="login_with_google">Login with Google</string>
    <string name="register">Sign up</string>
    <string name="email_not_valid">Invalid Email</string>
    <string name="phone_not_valid">Invalid phone number</string>
    <string name="password_small_length">Password should at last 5 characters</string>
    <string name="password_not_match">Passwords does not match</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="save_edits">Save Changes</string>
    <string name="chose_photo">Pick Image</string>
    <string name="name">Name</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="messages">Messages</string>
    <string name="admin">Admin</string>
    <string name="you">You</string>
    <string name="send">Send</string>
    <string name="filed_required">Field Require</string>
    <string name="update">Update</string>
    <string name="update_later">Update Later</string>
    <string name="close">Close</string>
    <string name="verify">Verify</string>
    <string name="forgot_password">Forgot your password ?</string>
    <string name="rest_password">Rest password ?</string>
    <string name="policy">By signing up, you agree to Pilo’s Terms and \n Conditions of Use, Privacy Policy and Mobile Terms</string>
    <string name="operation_done">Operation Done</string>
    <string name="follow_on">Following</string>
    <string name="follow_off">Follow</string>
    <string name="did_you_mean">Did you mean : </string>
    <string name="play">Play</string>
    <string name="related">Related</string>
    <string name="options">Options</string>
    <string name="play_list_name">Playlist Name</string>
    <string name="play_list_create">Create Playlist</string>
    <string name="play_list_update">Edit Playlist</string>
    <string name="play_list_delete">Delete Playlist</string>
    <string name="play_list_delete_body">Are you sure you want delete playlist</string>
    <string name="retry">Try again</string>

    <string name="show_more">View all</string>

    <string name="music_new">New Musics</string>
    <string name="artist_best">Most Popular</string>
    <string name="video_new">New Videos</string>
    <string name="album_new">New Albums</string>
    <string name="video_related">Related Musics</string>
    <string name="album_related">Related Albums</string>

    <string name="single_artist_music_count">Music</string>
    <string name="single_artist_video_count">Video</string>
    <string name="single_artist_album_count">Album</string>

    <string name="search_search_hint">Search on musics,albums,videos, ....</string>
    <string name="speech_not_supported">Voice search does not support</string>


    <string name="profile_edit">Edit Profile</string>
    <string name="profile_likes">Likes</string>
    <string name="profile_bookmarks">Bookmarks</string>
    <string name="profile_support">Support</string>
    <string name="profile_settings">Settings</string>

    <string name="go_to_artist">Go to artist</string>
    <string name="share">Share</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="download">Download</string>
    <string name="downloads">Downloads</string>

    <string name="audio_download_quality">Audio download quality</string>
    <string name="stream_quality">Audio stream quality</string>
    <string name="download_quality">Audio download quality</string>
    <string name="notifications">Notifications</string>
    <string name="global_notification">Global notifications</string>
    <string name="new_music_notification">New musics notifications</string>
    <string name="new_album_notification">New albums notifications</string>
    <string name="new_video_notification">New video notifications</string>


    <string name="clear_search_history">Clear search history</string>
    <string name="clear_search_history_body">Are you sure your want clear history</string>
    <string name="clear_music_history">Clear play history</string>
    <string name="clear_music_history_body">Are you sure your want clear history</string>
    <string name="clear_downloads">Clear downloads</string>
    <string name="follow_us">Follow Us</string>
    <string name="instagram">Instagram</string>
    <string name="telegram">Telegram</string>
    <string name="logout">Logout</string>
    <string name="exit_message">Press back button again to exit</string>
</resources>
