<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <include layout="@layout/page_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:layout_marginBottom="@dimen/activity_vertical_margin2x"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/activity_vertical_margin">


                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:src="@drawable/ic_tap_and_play" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:layout_weight="1"
                    android:fontFamily="@font/font_bold"
                    android:text="@string/play"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/normal_font_size" />


                <ImageView
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:src="@drawable/ic_keyboard_arrow_left_black" />
            </LinearLayout>


            <TextView
                android:id="@+id/tv_settings_quality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font"
                android:foreground="?selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:paddingEnd="@dimen/activity_vertical_margin"
                android:text="@string/audio_download_quality"
                android:textColor="@color/colorDark"
                android:textSize="@dimen/normal_font_size" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/activity_vertical_margin">


                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:src="@drawable/ic_setting" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:layout_weight="1"
                    android:fontFamily="@font/font_bold"
                    android:text="@string/options"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/normal_font_size" />


                <ImageView
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:src="@drawable/ic_keyboard_arrow_left_black" />
            </LinearLayout>


            <TextView
                android:id="@+id/tv_settings_notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font"
                android:foreground="?selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/notifications"
                android:textColor="@color/colorDark"
                android:textSize="@dimen/normal_font_size" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="#E4E4E4" />

            <TextView
                android:id="@+id/tv_settings_clear_search_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font"
                android:foreground="?selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:text="@string/clear_search_history"
                android:textColor="@color/colorDark"
                android:textSize="@dimen/normal_font_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="#E4E4E4" />


            <TextView
                android:id="@+id/tv_settings_clear_music_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font"
                android:foreground="?selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:text="@string/clear_music_history"
                android:textColor="@color/colorDark"
                android:textSize="@dimen/normal_font_size" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="#E4E4E4" />

            <TextView
                android:id="@+id/tv_settings_clear_downloads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font"
                android:foreground="?selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:text="@string/clear_downloads"
                android:textColor="@color/colorDark"
                android:textSize="@dimen/normal_font_size" />

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/activity_vertical_margin">


                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:src="@drawable/ic_person_add" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:layout_weight="1"
                    android:fontFamily="@font/font_bold"
                    android:text="@string/follow_us"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/normal_font_size" />


                <ImageView
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:src="@drawable/ic_keyboard_arrow_left_black" />
            </LinearLayout>


            <TextView
                android:id="@+id/tv_settings_instagram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:fontFamily="@font/font"
                android:foreground="?selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:visibility="gone"
                android:text="@string/instagram"
                android:textColor="@color/colorDark"
                android:textSize="@dimen/normal_font_size" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                android:background="#E4E4E4" />

            <TextView
                android:id="@+id/tv_settings_telegram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font"
                android:foreground="?selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:visibility="gone"
                android:text="@string/telegram"
                android:textColor="@color/colorDark"
                android:textSize="@dimen/normal_font_size" />


            <LinearLayout
                android:id="@+id/ll_settings_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackgroundBorderless"
                android:gravity="center"
                android:layout_marginBottom="@dimen/activity_vertical_margin2x"
                android:orientation="horizontal"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">


                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:rotationY="180.0"
                    android:src="@drawable/ic_exit_to_app" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:layout_weight="1"
                    android:fontFamily="@font/font_bold"
                    android:text="@string/logout"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/normal_font_size" />


                <ImageView
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:src="@drawable/ic_keyboard_arrow_left_black" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
