<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".activities.WelcomeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/bk_welcome" />

    <ImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_gravity="center|top"
        android:layout_marginTop="@dimen/_70sdp"
        android:src="@drawable/ic_pilo_logo" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="@dimen/activity_vertical_margin2x"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/gray_light_round_box_background"
            android:enabled="false"
            android:fontFamily="@font/font"
            android:hint="@string/phone"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="@dimen/activity_vertical_margin"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/normal_font_size" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/et_phone"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="@dimen/activity_vertical_margin2x"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/gray_light_round_box_background"
            android:fontFamily="@font/font"
            android:hint="@string/verify_code"
            android:inputType="text"
            android:paddingHorizontal="@dimen/activity_vertical_margin"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/normal_font_size" />


        <app.pilo.android.views.PiloButton
            android:id="@+id/pb_verify"
            android:layout_width="match_parent"
            android:layout_height="@dimen/pilo_button_height"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="@dimen/activity_vertical_margin2x"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin2x"
            app:text="@string/verify" />

    </RelativeLayout>
</FrameLayout>