<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:background="@drawable/white_round_box_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/font"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/normal_font_size"
            android:text="@string/play_list_update" />

        <ImageView
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:src="@drawable/ic_pilo_logo" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:background="#D0D0D0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/box_height"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin2x"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/box_height"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/et_edit_playlist_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:background="#f9f9f9"
                android:fontFamily="@font/font"
                android:hint="@string/name"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLines="1"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:paddingEnd="@dimen/activity_vertical_margin"
                android:textColor="@color/colorDark"
                android:textSize="@dimen/normal_font_size" />

            <LinearLayout
                android:id="@+id/ll_edit_playlist_delete"
                android:layout_gravity="center"
                android:layout_width="@dimen/box_height"
                android:layout_height="@dimen/box_height"
                android:gravity="center">

                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_delete" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/ll_edit_playlist_save"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:background="@drawable/green_round_box_background"
            android:foreground="?selectableItemBackgroundBorderless"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_edit_playlist"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/font"
                android:gravity="center"
                android:text="@string/save_edits"
                android:textColor="@android:color/white"
                android:textSize="@dimen/normal_font_size" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:visibility="gone" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_edit_playlist_close"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@null"
            android:fontFamily="@font/font"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/close"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/normal_font_size" />

    </LinearLayout>
</LinearLayout>